fix: codemirror styles and layout issue

--- a/packages/rje-code-widgets/src/index.scss
+++ b/packages/rje-code-widgets/src/index.scss
@@ -1,1 +1,6 @@
 @import './lib/rje-code-widgets';
+
+.rje-field--json {
+    // prevent codemirror from growing in width
+    width: 100%;
+}
